updated max width to prevent horizontal scrolling

--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -43,6 +43,11 @@ code {
   color: 'black'
 }
 
+#root {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 @media only screen and (max-width: 62em) {
   .panel {
     height: 350px;
@@ -53,6 +58,10 @@ code {
   .searchrow {
     width: 100%;
   }
+  .sidebaroverlay {
+    padding-top: 1rem;
+  }
+  
 }
 
 @media only screen and (max-width: 49em) {
